# maze-solver

./: LICENSE  README.md  main.py  pyproject.toml
src/: cell.py  geometries.py  maze.py  window.py
tests/: test_maze.py  tests.py
