[tool.poetry]
name = "maze-solver"
version = "0.1.0"
description = "Render a maze to the screen and solve it."
authors = ["Max Langer <max.langer.net@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
